--- a/raspi/install_k8s.yml
+++ b/raspi/install_k8s.yml
@@ -48,6 +48,16 @@
         name: kubernetes
         state: present
 
+    - name: Add Kubernetes apt-key
+      apt_key:
+        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+        state: present
+
+    - name: Add Kubernetes repository
+      apt_repository:
+        repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
+        state: present
+
     - name: Install Kubernetes packages
       apt:
         name: "{{ item }}"
