update for teest

--- a/raspi/genarate_ssh.yml
+++ b/raspi/genarate_ssh.yml
@@ -1,8 +1,34 @@
-- name: Generate SSH host keys
-  command: ssh-keygen -A
+---
+- name: setup ssh
+  hosts: raspiosc
+  become: yes
+  tasks:
+    - name: Generate SSH host keys
+      command: ssh-keygen -A
 
-- name: Start SSH service
-  service:
-    name: ssh
-    state: started
-    enabled: yes
+    - name: Start SSH service
+      service:
+        name: ssh
+        state: started
+        enabled: yes
+
+    - name: Disable password authentication
+      ansible.builtin.lineinfile:
+        path: /etc/ssh/sshd_config
+        regexp: "^#?PasswordAuthentication"
+        line: "PasswordAuthentication no"
+        validate: "/usr/sbin/sshd -T -f %s"
+      notify: restart ssh
+
+    - name: Enable pubkey authentication
+      ansible.builtin.lineinfile:
+        path: /etc/ssh/sshd_config
+        regexp: "^#?PubkeyAuthentication"
+        line: "PubkeyAuthentication yes"
+        validate: "/usr/sbin/sshd -T -f %s"
+      notify: restart ssh
+  handlers:
+    - name: restart ssh
+      ansible.builtin.service:
+        name: ssh
+        state: restarted
