--- a/raspi/install_k8s.yml
+++ b/raspi/install_k8s.yml
@@ -1,4 +1,3 @@
----
 - hosts: raspiosc
   become: yes
   tasks:
@@ -39,14 +38,10 @@
         state: present
 
     - name: Install Docker module for Python
-      pip:
+      apt:
         name: docker
         state: present
-
-    - name: Install Kubernetes module
-      pip:
-        name: kubernetes
-        state: present
+      become: yes
 
     - name: Add Kubernetes apt-key
       apt_key:
@@ -57,6 +52,10 @@
       apt_repository:
         repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
         state: present
+
+    - name: Update APT cache
+      apt:
+        update_cache: yes
 
     - name: Install Kubernetes packages
       apt:
